message MSG_NeuralLearning {

	// In the model only the ParameterSpaces are needed.
	// The rest (states and actions) is being inferred.
	message Model {
		message ParameterSpace {
			required string name         = 1;
			required int32  minValue     = 2;
			required int32  maxValue     = 3;
			required int32  defaultValue = 4;
			required bool   withActions  = 5;
		}
		
		repeated ParameterSpace parameterSpace = 1;
	}


	message Matrix {
		message Row {
			repeated float entry  = 1;
		}

		repeated Row row  = 1;		
	}
		

	required Model model               = 1;
	required float learningRate        = 3;
	required float traceDiscount       = 4;
	required int32 maxTraceLength      = 5; 
	required float discountFactor      = 6;

	repeated Matrix weights            = 7;
}
